--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,12 +2,27 @@
  * Global
  ****************************************/
 
+html.logreg {
+    height: 100%;
+}
+
 body {
+    position: relative;
+    height: 100%;
     font-family: 'Jost', Arial, sans-serif;
     background: url("../images/bg_white.png") repeat 0 0;
 }
 
-h2, h3 {
+html.logreg body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: url("../images/logreg_bg_black.png") no-repeat center center;
+    background-size: cover;
+}
+
+h1, h2, h3, h4, h5, h6 {
     margin: 0;
     font-family: 'Quicksand', Arial, sans-serif;
     font-weight: 600;
@@ -58,19 +73,120 @@ header {
     margin-right: 25px;
 }
 
-/*** Fields ***/
-/* Buttons */
+/*** Forms ***/
+/** Spacers **/
+.link_spacer {
+    margin-bottom: 15px;
+}
+
+/** Links **/
+form a {
+    display: inline;
+    color: #009BFF;
+    text-decoration: none;
+}
+
+form a:hover, form a:focus {
+    text-decoration: underline;
+}
+
+/** Fields **/
+.field {
+    display: block;
+    width: 90%;
+    margin: 0 auto 2em auto;
+}
+
+.field input {
+    box-sizing: border-box;
+    text-align: left;
+    width: 100%;
+    padding: 1.5em 1.5em 1em 1.5em;
+    background: #FAFAFA;
+    border: none;
+    border-bottom: 2px #eaeaea solid;
+}
+
+.field input:focus,
+.field input:not(:placeholder-shown) {
+    outline: none;
+    box-shadow: none;
+    border-color: #009BFF;
+}
+
+/** Fields - Floating label **/
+.floating_label_wrapper {
+    position: relative;
+    font-size: 0.9em;
+    background: #FAFAFA;
+    font-family: 'Jost', Arial, sans-serif;
+}
+
+/* Floating label - Input */
+.floating_label_input {
+    position: relative;
+    background: transparent !important;
+    z-index: 2000;
+}
+
+.floating_label_input::placeholder { color: transparent; }
+
+.floating_label_input,
+.floating_label_input + .floating_label {
+    display: block;
+    width: 100%;
+    max-height: 3.8em; /* = (fontSize * lineHeight) + (paddingTop + paddingBottom) */
+    line-height: 1;
+    font: inherit;
+}
+
+/* Floating label - Label */
+.floating_label_input + .floating_label {
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: left;
+    padding: 1.5em;
+    transition: transform .25s, opacity .25s ease-in-out;
+    transform-origin: 0 0;
+    opacity: .5;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    z-index: 1500;
+}
+
+.floating_label_input:focus + .floating_label,
+.floating_label_input:not(:placeholder-shown) + .floating_label {
+    transform: translate(1%, -30%) scale(.8);
+    opacity: .25;
+}
+/** Buttons **/
 .btn {
+    box-sizing: border-box;
+    display: inline-block;
+    text-align: center;
     width: 225px;
     height: 50px;
+    line-height: 45px;
     font-size: 1.2rem;
+    margin: 0;
+    padding: 0;
     background: none;
     color: #FFFFFF;
     border: 2px #009BFF solid;
     border-radius: 25px;
     font-family: 'Jost', Arial, sans-serif;
     cursor: pointer;
+    text-decoration: none;
     transition: background-color 150ms;
+}
+
+.btn:focus {
+    outline: none;
 }
 
 .btn.filled {
@@ -87,8 +203,20 @@ header {
     border-color: #0094f5;
 }
 
+/* Submit button */
+input[type="submit"] {
+    margin-top: 10px;
+}
+
 /*** Footer ***/
+#footer_spacer {
+    height: 280px;
+}
+
 footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
     width: 100%;
     color: #FFFFFF;
 }
@@ -177,8 +305,14 @@ footer p {
     text-decoration: underline;
 }
 
-.fLSection img {
-    height: 95%;
+#footerLogo {
+    display: block;
+    height: 100%;
+}
+
+#footerLogo img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /* Footer copyright */
@@ -245,4 +379,26 @@ footer p {
 .index_content p {
     display: inline-block;
     width: 40%;
+}
+
+/****************************************
+ * Login / Register
+ ****************************************/
+
+/*** Login / register box ***/
+#login {
+    box-sizing: border-box;
+    text-align: center;
+    width: 450px;
+    padding: 25px 15px;
+    background: #FFFFFF;
+    border-radius: 4px;
+    -webkit-box-shadow: 7px 7px 8px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 7px 7px 8px 0px rgba(0,0,0,0.25);
+    box-shadow: 7px 7px 8px 0px rgba(0,0,0,0.25);
+}
+
+#login h1 {
+    font-size: 1.5em;
+    margin-bottom: 35px;
 }
