--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -409,20 +409,18 @@ footer p {
 
 #new_survey_btn_div{
     text-align: center;
-    margin-top: 10%;
+    margin-top: 4.40%;
 }
 
 #my_surveys_body{
     margin: 3% auto 0 auto;
     width: 70vw;
     height: 50vh;
-    border: red solid 1px;
 }
 
 #surveys_list{
     margin-top: 1%;
     height: 85.5%;
-    border: green solid 1px;
 }
 
 .survey{
@@ -432,4 +430,15 @@ footer p {
     padding: 1%;
     background-color: whitesmoke;
     border: #1D2331 solid 3px;
+}
+
+.survey img, #new_survey_btn_div img{
+    width: 30px;
+}
+ .survey h3{
+     margin: auto 0 auto 0;
+ }
+
+.div_img{
+    padding-top: 5px;
 }
