Outline des liens retiré (c'est moche)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
 }
 
+a {
+    outline: none;
+}
+
 /*** Header ***/
 #header_wrapper {
     filter: drop-shadow(0 7px 5px rgba(0, 0, 0, 0.75));
