--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -654,6 +654,7 @@ footer p {
 
 /* Surveys */
 .survey {
+    box-sizing: border-box;
     position: relative;
     width: 100%;
     height: 60px;
@@ -685,12 +686,22 @@ footer p {
 }
 
 .surveyLink {
+    box-sizing: border-box;
     display: block;
     width: 100%;
     height: 100%;
     padding: 0 20px;
     color: #000000;
     text-decoration: none;
+}
+
+.surveyDate {
+    font-size: 0.8em;
+    color: #c1c1c1;
+}
+
+.surveyMembers {
+    float: right;
 }
 
 /****************************************
