--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -758,6 +758,62 @@ footer p {
 }
 
 /****************************************
+ * View survey
+ ****************************************/
+
+#survey_viewer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 90vh;
+}
+
+/*** Questions list ***/
+#sVQuestionList {
+    flex-shrink: 0;
+    flex-grow: 0;
+    font-size: 1.1em;
+    width: 25%;
+    height: 100%;
+    background: #f6f6f6;
+    overflow-y: auto;
+}
+
+#sVQuestionList ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+
+#sVQuestionList li {
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    padding: 0 50px;
+    transition: background-color 100ms ease-in;
+}
+
+#sVQuestionList li:hover {
+    background: #ececec;
+}
+
+/*** Questions view ***/
+#sVQuestionView {
+    box-sizing: border-box;
+    flex-shrink: 0;
+    flex-grow: 1;
+    font-size: 1em;
+    height: 100%;
+    padding: 30px 50px;
+    font-weight: normal;
+}
+
+/****************************************
  * Keyframes
  ****************************************/
 
