Ajout de la V1 de create_survey.php

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -787,30 +787,49 @@ footer p {
     list-style: none;
 }
 
-
+/** Questions **/
 #sVQuestionList li {
     box-sizing: border-box;
     display: block;
     width: 100%;
     height: 60px;
     line-height: 60px;
-    padding: 0 50px;
     transition: background-color 100ms ease-in;
 }
 
-#sVQuestionList li:hover {
+#sVQuestionList li:hover,
+#sVQuestionList li.selected {
     background: #ececec;
 }
+
+#sVQuestionList li a {
+    display: block;
+    padding: 0 50px;
+    color: #000000;
+    text-decoration: none;
+}
+
+/** New question **/
+.newQuestion a {
+    color: #c1c1c1 !important;
+}
+
+.newQuestion svg rect       { fill: #c1c1c1 !important; }
+.newQuestion svg polygon    { stroke: #c1c1c1 !important; }
 
 /*** Questions view ***/
 #sVQuestionView {
     box-sizing: border-box;
-    flex-shrink: 0;
+    flex-shrink: 1;
     flex-grow: 1;
     font-size: 1em;
     height: 100%;
     padding: 30px 50px;
     font-weight: normal;
+}
+
+#sVQuestionView h2 {
+    margin-bottom: 20px;
 }
 
 /****************************************
