--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -839,6 +839,7 @@ footer p {
 /*** Questions view ***/
 #sVQuestionView {
     box-sizing: border-box;
+    text-align: center;
     flex-shrink: 1;
     flex-grow: 1;
     font-size: 1em;
@@ -847,8 +848,20 @@ footer p {
     font-weight: normal;
 }
 
+/** Question view title **/
 #sVQuestionView h2 {
+    font-size: 1.5em;
     margin-bottom: 20px;
+}
+
+#sVQuestionView h2 textarea {
+    width: 100%;
+    height: 4.5em;
+    line-height: 1.5em;
+    resize: none;
+    padding: 10px;
+    background: none;
+    border: thin #c1c1c1 solid;
 }
 
 /****************************************
