--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -396,6 +396,13 @@ input[type="radio"]:checked + .radio:after {
     line-height: 30px;
 }
 
+.btn.smaller-2 {
+    font-size: 0.6em;
+    width: 100px;
+    height: 23px;
+    line-height: 23px;
+}
+
 /* Submit button */
 input[type="submit"] {
     margin-top: 10px;
@@ -710,6 +717,17 @@ footer p {
     float: right;
 }
 
+.surveyDeletor {
+    position: absolute;
+    top: 0;
+    right: -60px;
+    text-align: center;
+    width: 60px;
+    height: 60px;
+    background: #f6f6f6;
+    border-left: thin #c1c1c1 solid;
+}
+
 /****************************************
  * My account
  ****************************************/
@@ -848,16 +866,56 @@ footer p {
     font-weight: normal;
 }
 
-/** Question view title **/
+#sVQuestionView .errorBox {
+    margin: 0 auto 20px auto;
+}
+
+/** Survey title **/
+#sVQTitle {
+    margin-bottom: 20px;
+    border-bottom: thin #c1c1c1 solid;
+}
+
+/* Form */
+#sVQTitle form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#sVQTitle .btn {
+    margin: 0 0 0 50px;
+}
+
+/* Survey title */
+#sVQTitle h1 {
+    flex-grow: 1;
+    font-size: 1.4em;
+}
+
+#sVQTitle h1 textarea {
+    width: 100%;
+    height: 2.8em; /* line-height * 2 */
+    line-height: 1.4em;
+    resize: none;
+    padding: 10px;
+    background: none;
+    border: none;
+}
+
+/** Question view **/
+/* Question title */
 #sVQuestionView h2 {
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin-bottom: 20px;
 }
 
 #sVQuestionView h2 textarea {
+    box-sizing: border-box;
     width: 100%;
-    height: 4.5em;
-    line-height: 1.5em;
+    height: 4.8em; /* line-height * 4 */
+    line-height: 1.2em;
     resize: none;
     padding: 10px;
     background: none;
