--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
  ****************************************/
 
 body {
-    position: relative;
+    /*position: relative;*/
     height: 100%;
     font-family: 'Jost', Arial, sans-serif;
     /* V1
