Ajout du lien sur la liste de sondages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -674,8 +674,7 @@ footer p {
     box-sizing: border-box;
     position: relative;
     width: 100%;
-    height: 60px;
-    line-height: 60px;
+    height: 80px;
     margin-bottom: 10px;
     background: #f6f6f6;
     border-radius: 3px;
@@ -706,7 +705,8 @@ footer p {
     box-sizing: border-box;
     display: block;
     width: 100%;
-    height: 100%;
+    height: 60px;
+    line-height: 60px;
     padding: 0 20px;
     color: #000000;
     text-decoration: none;
@@ -730,6 +730,20 @@ footer p {
     height: 60px;
     background: #f6f6f6;
     border-left: thin #c1c1c1 solid;
+}
+
+.surveyURIContainer {
+    box-sizing: border-box;
+    font-size: 0.7em;
+    width: 100%;
+    height: 20px;
+    line-height: 20px;
+    padding: 0 10px;
+    background: #eaeaea;
+}
+
+.surveyURI {
+    color: #8d8d8d;
 }
 
 /****************************************
